--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -6,6 +6,24 @@ server.port=8000
 eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+#Circuit breaker
+#max số lần gọi lại api
+resilience4j.retry.instances.sample-api.max-attempts=5
+
+#max thời gian gọi lại api
+resilience4j.retry.instances.sample-api.wait-duration=1s
+
+#thời gian gọi lại api theo cấp số nhân
+resilience4j.retry.instances.sample-api.enable-exponential-backoff=true
+
+
+#rate limit
+resilience4j.ratelimiter.instances.default.limit-for-period=2
+resilience4j.ratelimiter.instances.default.limit-refresh-period=10s
+
+#bulk head
+resilience4j.bulkhead.instances.rate-limit.max-concurrent-calls=1
+resilience4j.bulkhead.instances.rate-limit.max-wait-duration = 1s
 
 #Data config
 spring.jpa.show-sql=true
