--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.config.import=optional:configserver:http://localhost:8888
 server.port=8000
 
 #eureka config
-eureka.instance.hostname=localhost
+#eureka.instance.hostname=localhost
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
+#eureka.client.serviceUrl.defaultZone=http://naming-server:8761/eureka
 
 #Circuit breaker
 #max số lần gọi lại api
@@ -16,6 +17,9 @@ resilience4j.retry.instances.sample-api.wait-duration=1s
 #thời gian gọi lại api theo cấp số nhân
 resilience4j.retry.instances.sample-api.enable-exponential-backoff=true
 
+#sampling (0.0->1.0)<=>(0%-100%)
+#in product is 0.05
+spring.sleuth.sampler.probability= 1.0
 
 #rate limit
 resilience4j.ratelimiter.instances.default.limit-for-period=2
